--- a/MyLittleShopTest-main/Shoes/Shoes.html
+++ b/MyLittleShopTest-main/Shoes/Shoes.html
@@ -11,6 +11,7 @@
 <body>
         <nav class="sidebar close">
         <header>
+            <button class="close-sidebar-btn" id="closeSidebarBtn" aria-label="Close sidebar">&times;</button>
             <div class="image-text">
                 <span class="image">
                     <img src="../logo.png" alt="شعار">
@@ -78,12 +79,28 @@
         </div>
     </nav>
 
+    <!-- Sidebar overlay for mobile -->
+    <div class="sidebar-overlay" id="sidebarOverlay"></div>
+
      <section class="home">
-        <div class="text">متجري الصغير</div>
+        <div class="header-row-mobile">
+            <div class="text">متجري الصغير</div>
+        </div>
+        
+        <!-- Modern animated hamburger button for mobile -->
+        <button class="hamburger modern-hamburger" id="hamburgerBtn" aria-label="Open sidebar">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
+        
         <div class="hero responsive-container">
             <div class="text-container">
             <h1>أحذية<br><span>السباحة</span></h1>
-            <div class="price-tag">3500 <span class="currency">دج</span></div>
+            <div class="price-and-button">
+                <div class="price-tag">3500 <span class="currency">دج</span></div>
+                <a href="../OrderPage/OrderPage.html" class="button">تسوق الآن</a>
+            </div>
             <div class="product-description">
                 <div class="highlight-badge">🔥 جديد الصيف! 🔥</div>
                 <p>أحذية البحر بألوان أنيقة: أسود، أزرق، وردي</p>
@@ -97,7 +114,6 @@
                 <span class="callout">جاهز لمغامرتك القادمة؟ <span class="emoji">🏖️</span><span class="emoji">⛰️</span></span>
                 <span class="callout">✉️ اطلب الآن وكن مستعدًا للصيف بكل راحة وأناقة!</span>
             </div>
-            <a href="../OrderPage/OrderPage.html" class="button">تسوق الآن</a>
         </div>
         <div class="image-container">
             <img src="ShoesImages/TestBlue.png" alt="حذاء" class="shoe-image" width="450px">
